--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-input::-webkit-calendar-picker-indicator {
+input::-webkit-calendar-picker-indicator:focus {
 display: none;
 }
